src/app/components/mobile-navigation/mobile-navigation.component.scss
:host {
  .mobile-menu-icon {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    width: 30px;
    height: 30px;
    transition: .4s ease-in-out;
    cursor: pointer;

    > .mobile-menu-icon-line {
      display: flex;
      justify-content: space-between;
      align-items: center;

      > div {
        width: 8px;
        height: 8px;
        background: var(--primary-color);
      }
    }

    &.active {
      transform: rotate(90deg);
    }

    @media(min-width: 768px) {
      display: none;
    }
  }

  nav {
    position: fixed;
    top: 100px;
    left: 0;
    width: 0;
    opacity: 0;
    height: calc(100vh - 100px);
    background: var(--primary-color);
    transition: .4s ease-in-out;

    &.active {
      width: 100%;
      opacity: 1;

      ul > li {
        position: relative;
        left: -100px;
        opacity: 0;
        animation-name: slideIn;
        animation-duration: .4s;
        animation-fill-mode: forwards;

        &:nth-child(1) {
          animation-delay: .4s;
        }
        &:nth-child(2) {
          animation-delay: .8s;
        }
        &:nth-child(3) {
          animation-delay: 1.2s;
        }
        &:nth-child(4) {
          animation-delay: 1.6s;
        }
        &:nth-child(5) {
          animation-delay: 2s;
        }
      }
    }

    ul {
      display: flex;
      flex-direction: column;
      justify-content: center;
      align-items: center;
      height: 100%;

      li:not(:last-of-type) {
        margin-bottom: 30px;
      }

      a {
        font-size: 20px;
        font-weight: 600;
        color: var(--secondary-color);
      }
    }
  }

  @keyframes slideIn {
    from {
      left: -100px;
      opacity: 0;
    }
    to {
      left: 0;
      opacity: 1;
    }
  }
}

